引入数据库，增加更新通知功能

--- a/data/config.example.json
+++ b/data/config.example.json
@@ -1,6 +1,7 @@
 {
     "api_id": 1231231,
     "api_hash": "7xxxxxxxx",
+    "bot_username": "xxxx_bot",
     "bot_token": "591xxxxx37:Axxxxxxx25kUiAcY",
     "bgm_token": "https://next.bgm.tv/demo/access-token",
     "tmdb_token": "xxx",
