--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 CairoSVG>=2.6.0
+Flask
 more_itertools>=9.0.0
 pyTelegramBotAPI>=4.9.0
 requests>=2.28.1
+schedule
 Telethon>=1.26.1
 waitress>=2.1.2
 xmltodict>=0.13.0
+yt_dlp>=2023.1.6
